--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
           </nav>
     </div>
 
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-lg-5">
+          <img class="myimg " src="Images/app-signup.png" alt="">
+        </div>
+        <div class="col-lg-5 pt-5 mt-5">
+          <h1 class="mytitel">Simple and Powerful <br> Dashboard</h1>
+          <p class="myparagraf">Beoplay A1 bluetooth speakers image on the left is owned by Bang and Olufsen and is released under creative commons lisence.</p>
+        </div>
+        <form class="myinput" >
+          
+        </form>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
