--- a/index.html
+++ b/index.html
@@ -48,11 +48,52 @@
         </div>
         <div class="col-lg-5 pt-5 mt-5">
           <h1 class="mytitel">Simple and Powerful <br> Dashboard</h1>
-          <p class="myparagraf">Beoplay A1 bluetooth speakers image on the left is owned by Bang and Olufsen and is released under creative commons lisence.</p>
+          <p class="myparagraf pt-3">Beoplay A1 bluetooth speakers image on the left is owned by Bang and Olufsen and is released under creative commons lisence.</p>
+          <form class="" >
+            <input class="myinput mt-4" type="email" aria-required="true" aria-invalid="false" placeholder="join the wait List" value="" name="email"  >
+            <input class="myinput2 mt-4" type="submit" value="subscribe">
+          </form>
         </div>
-        <form class="myinput" >
-          
-        </form>
+       
+      </div>
+    </div>
+
+    <div class="container py-5">
+      <div class="row py-5">
+        <div class="col-lg-12 py-5 my-5">
+          <h1 class="mysubtitel text-center">Why Choose Advent ?</h1>
+          <p class="mypara text-center">Advent is and has been the best CRM and accounting platform for most of the <br> fortune 500. Startups love us because we didn't make Advent for rich guys. Its yours <br> and you pay just once.</p>
+        </div>
+        <div class="row py-5">
+         <div class="col-lg-4">
+          <div class="mydiv">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-caret-up-square myicon1" viewBox="0 0 16 16">
+              <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+              <path d="M3.544 10.705A.5.5 0 0 0 4 11h8a.5.5 0 0 0 .374-.832l-4-4.5a.5.5 0 0 0-.748 0l-4 4.5a.5.5 0 0 0-.082.537z"/>
+            </svg>
+          </div>
+          <h1 class="myheader text-center">Realtime Growth Stats</h1>
+          <p class="myphrase text-center">No delay in the realtime statistics and demographics, what you see is what exactly happening. You will have to try to believe it.</p>
+         </div>
+         <div class="col-lg-4">
+          <div class="mydiv">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box myicon2" viewBox="0 0 16 16">
+              <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
+            </svg>
+          </div>
+          <h1 class="myheader text-center">Realtime Growth Stats</h1>
+          <p class="myphrase text-center">No delay in the realtime statistics and demographics, what you see is what exactly happening. You will have to try to believe it.</p>
+         </div>
+         <div class="col-lg-4">
+          <div class="mydiv">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bell-fill myicon3" viewBox="0 0 16 16">
+              <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
+            </svg>
+          </div>
+          <h1 class="myheader text-center">Realtime Growth Stats</h1>
+          <p class="myphrase text-center">No delay in the realtime statistics and demographics, what you see is what exactly happening. You will have to try to believe it.</p>
+         </div>
+        </div>
       </div>
     </div>
 
